--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/m1DevProjects/mNews#readme",
   "dependencies": {
     "ascii-table": "^0.0.9",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "glob": "^8.0.3",
     "rss-parser": "^3.12.0",
