--- a/package.json
+++ b/package.json
@@ -25,11 +25,9 @@
   },
   "homepage": "https://github.com/m1DevProjects/mNews#readme",
   "dependencies": {
-    "ascii-table": "^0.0.9",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "glob": "^8.0.3",
-    "rss-parser": "^3.12.0",
-    "util": "^0.12.5"
+    "discord.js": "^14.6.0",
+    "dotenv": "^16.0.3",
+    "rss-feed-emitter": "^3.2.3",
+    "striptags": "^3.2.0"
   }
 }
